--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: ayer
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:passontw/passontw.github.io.git
+  branch: master
